syntax = "proto3";
package kujira.denom;

import "gogoproto/gogo.proto";
import "denom/authorityMetadata.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Team-Kujira/core/x/denom/types";

// Params holds parameters for the denom module
message Params {
  repeated cosmos.base.v1beta1.Coin creation_fee = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.moretags) = "yaml:\"creation_fee\"",
    (gogoproto.nullable) = false
  ];
}
